Delete proposal