@@ -1,32 +1,20 @@
 package org.herukyatto.artlibra.backend.config;
 
 import lombok.RequiredArgsConstructor;
-import org.herukyatto.artlibra.backend.entity.Role;
-import org.herukyatto.artlibra.backend.entity.RoleName;
-import org.herukyatto.artlibra.backend.repository.RoleRepository;
 import org.herukyatto.artlibra.backend.security.JwtAuthenticationFilter;
-import org.springframework.boot.CommandLineRunner;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
-import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.http.HttpMethod;
-import org.herukyatto.artlibra.backend.security.CustomAuthenticationEntryPoint; // <<== IMPORT MỚI
-import jakarta.servlet.http.HttpServletResponse; // <<== IMPORT MỚI
 
 import java.util.Arrays;
 import java.util.List;
@@ -38,28 +26,19 @@ import java.util.List;
 public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthFilter;
-    private final UserDetailsService userDetailsService;
-    private final CustomAuthenticationEntryPoint customAuthenticationEntryPoint; // <<== INJECT MÀY DÒ LỖI
+    private final AuthenticationProvider authenticationProvider;
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .csrf(csrf -> csrf.disable())
-                // Thêm bộ xử lý exception
-                .exceptionHandling(exception -> exception
-                        .authenticationEntryPoint(customAuthenticationEntryPoint)
-                        // Thêm handler cho lỗi 403
-                        .accessDeniedHandler((request, response, accessDeniedException) ->
-                                response.sendError(HttpServletResponse.SC_FORBIDDEN, "Error: Forbidden")
-                        )
-                )
+                .csrf(AbstractHttpConfigurer::disable)
                 .authorizeHttpRequests(authorize -> authorize
                         .requestMatchers("/api/auth/**").permitAll()
                         .anyRequest().authenticated()
                 )
                 .sessionManagement(manager -> manager.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authenticationProvider(authenticationProvider())
+                .authenticationProvider(authenticationProvider)
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -68,52 +47,14 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-
-        // === THAY ĐỔI CUỐI CÙNG NẰM Ở ĐÂY ===
-        // Thay vì "*", chúng ta chỉ định rõ các nguồn được phép.
-        // "null" là nguồn gốc khi bạn mở file HTML trực tiếp từ máy tính.
-        // "http://localhost:3000" là nguồn gốc của frontend React chúng ta sẽ làm sau này.
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "null"));
-
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "http://localhost:3001", "null"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "x-auth-token"));
-        configuration.setExposedHeaders(List.of("x-auth-token"));
-
-        // Bây giờ chúng ta có thể dùng `setAllowCredentials(true)` một cách an toàn vì đã chỉ định rõ nguồn gốc
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
         configuration.setAllowCredentials(true);
-
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 
-    @Bean
-    public PasswordEncoder passwordEncoder() { return new BCryptPasswordEncoder(); }
-
-    @Bean
-    public AuthenticationProvider authenticationProvider() {
-        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-        authProvider.setUserDetailsService(userDetailsService);
-        authProvider.setPasswordEncoder(passwordEncoder());
-        return authProvider;
-    }
-
-    @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
-        return config.getAuthenticationManager();
-    }
-
-    @Bean
-    CommandLineRunner initDatabase(RoleRepository roleRepository) {
-        return args -> {
-            Arrays.stream(RoleName.values()).forEach(roleName -> {
-                if (roleRepository.findByName(roleName).isEmpty()) {
-                    Role newRole = new Role();
-                    newRole.setName(roleName);
-                    roleRepository.save(newRole);
-                    System.out.println("Created role: " + roleName);
-                }
-            });
-        };
-    }
+    // XÓA CÁC BEAN userDetailsService(), passwordEncoder(), authenticationProvider(), authenticationManager() KHỎI ĐÂY
 }
